Update starship config

--- a/config/starship/starship.toml
+++ b/config/starship/starship.toml
@@ -197,7 +197,7 @@ symbol = " "
 symbol = " "
 
 [memory_usage]
-disabled = false
+disabled = true
 format = 'using $symbol [${ram}( | ${swap})]($style) '
 symbol = "󰍛"
 threshold = 75 # Set to -1 to always show.
