--- a/src/home/.config/sheldon/plugins.toml
+++ b/src/home/.config/sheldon/plugins.toml
@@ -27,17 +27,6 @@ github = "romkatv/zsh-defer"
 [plugins.auto-venv]
 github = "Skylor-Tang/auto-venv"
 
-[plugins.zsh-autopair]
-github = "hlissner/zsh-autopair"
-use = ["autopair.zsh"]
-
-[plugins.zsh-autosuggestions]
-github = "zsh-users/zsh-autosuggestions"
-use = ["{{ name }}.zsh"]
-
-[plugins.zsh-you-should-use]
-github = "MichaelAquilina/zsh-you-should-use"
-
 [plugins.ohmyzsh]
 github = "ohmyzsh/ohmyzsh"
 dir = "lib"
@@ -47,6 +36,19 @@ use = ["clipboard.zsh", "functions.zsh"]
 post = """
   unfunction uninstall_oh_my_zsh
   unfunction upgrade_oh_my_zsh"""
+
+[plugins.zsh-autopair]
+github = "hlissner/zsh-autopair"
+use = ["autopair.zsh"]
+
+[plugins.zsh-autosuggestions]
+github = "zsh-users/zsh-autosuggestions"
+use = ["{{ name }}.zsh"]
+apply = ["defer"]
+
+[plugins.zsh-you-should-use]
+github = "MichaelAquilina/zsh-you-should-use"
+apply = ["defer"]
 
 # This needs to be loaded as close to the end as possible but before
 # zsh-history-substring-search.
@@ -63,7 +65,7 @@ apply = ["defer"]
 [plugins.zsh-history-substring-search.hooks]
 post = '''
   # Make sure that the terminal is in application mode when zle is active, since
-  # only then are values from $terminfo valid.
+  # only then are values from `$terminfo` valid.
   # From: https://github.com/ohmyzsh/ohmyzsh/blob/master/lib/key-bindings.zsh
   if (( ${+terminfo[smkx]} )) && (( ${+terminfo[rmkx]} )); then
     function zle-line-init() { echoti smkx }
@@ -75,8 +77,3 @@ post = '''
 
   bindkey "${terminfo[kcuu1]}" history-substring-search-up
   bindkey "${terminfo[kcud1]}" history-substring-search-down'''
-
-# For example:
-#
-# [plugins.base16]
-# github = "chriskempson/base16-shell"
