--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,7 +9,8 @@
     "tamasfe.even-better-toml",
     "ms-vscode.makefile-tools",
     "timonwong.shellcheck",
-    "xadillax.viml"
+    "xadillax.viml",
+    "ldez.ignore-files"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
