Add words to spellcheck dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,8 @@
         "hlissner",
         "imageoptim",
         "iterm",
+        "kcud1",
+        "kcuu1",
         "killall",
         "linuxbrew",
         "mkpath",
