Add more words to VSCode spell check dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,8 +34,10 @@
         "ollama",
         "osascript",
         "pandoc",
+        "pbat",
         "penv",
         "ppath",
+        "prettybat",
         "rmkx",
         "romkatv",
         "SAVEHIST",
