Update spell check dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,12 @@
         "asciinema",
         "asciiquarium",
         "autopair",
+        "Benner",
+        "bierner",
         "bindkey",
+        "cffinit",
         "cowsay",
+        "decasify",
         "direnv",
         "dotenv",
         "DUPS",
@@ -16,6 +20,7 @@
         "endfor",
         "expandtab",
         "fira",
+        "harrydowning",
         "hlissner",
         "imageoptim",
         "iterm",
@@ -26,12 +31,15 @@
         "kend",
         "khome",
         "killall",
+        "ldez",
         "linuxbrew",
         "mkpath",
+        "moreutils",
         "nocompatible",
         "noexpandtab",
         "ohmyzsh",
         "ollama",
+        "orcid",
         "osascript",
         "pandoc",
         "pbat",
@@ -51,11 +59,17 @@
         "smkx",
         "softtabstop",
         "somo",
+        "sttr",
+        "tamasfe",
         "terminfo",
+        "timonwong",
         "unfunction",
+        "varlock",
         "venv",
         "vicmd",
         "viins",
+        "viml",
+        "xadillax",
         "zmodload",
         "zprof"
     ]
