--- a/src/home/.config/homebrew/Brewfile
+++ b/src/home/.config/homebrew/Brewfile
@@ -97,6 +97,9 @@ brew "starship"
 # CLI to perform various operations on string
 brew "sttr"
 
+# Unpack everything with one command
+brew "unp"
+
 # Extremely fast Python package installer and resolver, written in Rust
 brew "uv"
 
