Update spell check dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,7 @@
         "romkatv",
         "SAVEHIST",
         "setaf",
+        "setopt",
         "shellcheck",
         "shellenv",
         "shfmt",
@@ -64,6 +65,7 @@
         "terminfo",
         "timonwong",
         "unfunction",
+        "unsetopt",
         "varlock",
         "venv",
         "vicmd",
