Apply defer to auto-venv

--- a/src/home/.config/sheldon/plugins.toml
+++ b/src/home/.config/sheldon/plugins.toml
@@ -26,6 +26,7 @@ github = "romkatv/zsh-defer"
 
 [plugins.auto-venv]
 github = "Skylor-Tang/auto-venv"
+apply = ["defer"]
 
 [plugins.direnv]
 inline = '''
