Update spell check dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,10 +7,13 @@
         "asciinema",
         "asciiquarium",
         "autopair",
+        "autoselect",
+        "batcat",
         "Benner",
         "bierner",
         "bindkey",
         "cffinit",
+        "complist",
         "cowsay",
         "decasify",
         "direnv",
@@ -33,6 +36,7 @@
         "killall",
         "ldez",
         "linuxbrew",
+        "menuselect",
         "mkpath",
         "moreutils",
         "nocompatible",
@@ -71,6 +75,7 @@
         "vicmd",
         "viins",
         "viml",
+        "WORDCHARS",
         "xadillax",
         "zmodload",
         "zprof"
