Update spell check dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,84 +1,86 @@
 {
     "makefile.configureOnOpen": false,
     "cSpell.words": [
-        "Apjanke's",
-        "Aquilina",
-        "Asciicast",
-        "asciinema",
-        "asciiquarium",
-        "autopair",
-        "autoselect",
-        "batcat",
-        "Benner",
-        "bierner",
-        "bindkey",
-        "cffinit",
-        "complist",
-        "cowsay",
-        "decasify",
-        "direnv",
-        "dotenv",
-        "DUPS",
-        "echoti",
-        "endfor",
-        "expandtab",
-        "fira",
-        "harrydowning",
-        "hlissner",
-        "imageoptim",
-        "iterm",
-        "kcbt",
-        "kcud1",
-        "kcuu1",
-        "kdch1",
-        "kend",
-        "khome",
-        "killall",
-        "ldez",
-        "linuxbrew",
-        "menuselect",
-        "mkpath",
-        "moreutils",
-        "nocompatible",
-        "noexpandtab",
-        "ohmyzsh",
-        "ollama",
-        "orcid",
-        "osascript",
-        "pandoc",
-        "pbat",
-        "penv",
-        "ppath",
-        "prettybat",
-        "rmkx",
-        "romkatv",
-        "SAVEHIST",
-        "setaf",
-        "setopt",
-        "shellcheck",
-        "shellenv",
-        "shfmt",
-        "shiftwidth",
-        "showmatch",
-        "Skylor",
-        "smkx",
-        "softtabstop",
-        "somo",
-        "sttr",
-        "tamasfe",
-        "terminfo",
-        "timonwong",
-        "unfunction",
-        "unsetopt",
-        "varlock",
-        "venv",
-        "vicmd",
-        "viins",
-        "viml",
-        "WORDCHARS",
-        "xadillax",
-        "zmodload",
-        "zprof"
+      "Apjanke's",
+      "Aquilina",
+      "Asciicast",
+      "asciinema",
+      "asciiquarium",
+      "autopair",
+      "autoselect",
+      "batcat",
+      "Benner",
+      "bierner",
+      "bindkey",
+      "cffinit",
+      "complist",
+      "cowsay",
+      "decasify",
+      "direnv",
+      "dotenv",
+      "DUPS",
+      "echoti",
+      "endfor",
+      "expandtab",
+      "fira",
+      "harrydowning",
+      "hlissner",
+      "imageoptim",
+      "iterm",
+      "kcbt",
+      "kcud1",
+      "kcuf1",
+      "kcuu1",
+      "kdch1",
+      "kend",
+      "khome",
+      "killall",
+      "ldez",
+      "linuxbrew",
+      "menuselect",
+      "mkpath",
+      "moreutils",
+      "nocompatible",
+      "noexpandtab",
+      "ohmyzsh",
+      "ollama",
+      "orcid",
+      "osascript",
+      "pandoc",
+      "pbat",
+      "penv",
+      "ppath",
+      "prettybat",
+      "rmkx",
+      "romkatv",
+      "SAVEHIST",
+      "setaf",
+      "setopt",
+      "shellcheck",
+      "shellenv",
+      "shfmt",
+      "shiftwidth",
+      "showmatch",
+      "Skylor",
+      "smkx",
+      "softtabstop",
+      "somo",
+      "sttr",
+      "tamasfe",
+      "terminfo",
+      "timonwong",
+      "unfunction",
+      "unsetopt",
+      "varlock",
+      "venv",
+      "vicmd",
+      "viins",
+      "viml",
+      "WORDCHARS",
+      "xadillax",
+      "zmodload",
+      "zprof",
+      "zshzle"
     ],
     "editor.rulers": [
         80, 100
