--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,14 +6,17 @@
       "Asciicast",
       "asciinema",
       "asciiquarium",
+      "autohide",
       "autopair",
       "autoselect",
       "batcat",
       "Benner",
       "bierner",
       "bindkey",
+      "Cascadia",
       "cffinit",
       "complist",
+      "Consolas",
       "cowsay",
       "decasify",
       "direnv",
@@ -37,6 +40,7 @@
       "killall",
       "ldez",
       "linuxbrew",
+      "Menlo",
       "menuselect",
       "mkpath",
       "moreutils",
