Format VS Code config files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,92 +1,90 @@
 {
-    "makefile.configureOnOpen": false,
-    "cSpell.words": [
-      "Apjanke's",
-      "Aquilina",
-      "Asciicast",
-      "asciinema",
-      "asciiquarium",
-      "autohide",
-      "autopair",
-      "autoselect",
-      "batcat",
-      "Benner",
-      "bierner",
-      "bindkey",
-      "Cascadia",
-      "cffinit",
-      "complist",
-      "Consolas",
-      "cowsay",
-      "decasify",
-      "direnv",
-      "dotenv",
-      "DUPS",
-      "echoti",
-      "endfor",
-      "expandtab",
-      "fira",
-      "harrydowning",
-      "hlissner",
-      "imageoptim",
-      "iterm",
-      "kcbt",
-      "kcud1",
-      "kcuf1",
-      "kcuu1",
-      "kdch1",
-      "kend",
-      "khome",
-      "killall",
-      "ldez",
-      "linuxbrew",
-      "Menlo",
-      "menuselect",
-      "mkpath",
-      "moreutils",
-      "nocompatible",
-      "noexpandtab",
-      "ohmyzsh",
-      "ollama",
-      "orcid",
-      "osascript",
-      "pandoc",
-      "pbat",
-      "penv",
-      "ppath",
-      "prettybat",
-      "rmkx",
-      "romkatv",
-      "SAVEHIST",
-      "setaf",
-      "setopt",
-      "shellcheck",
-      "shellenv",
-      "shfmt",
-      "shiftwidth",
-      "showmatch",
-      "Skylor",
-      "smkx",
-      "softtabstop",
-      "somo",
-      "sttr",
-      "tamasfe",
-      "terminfo",
-      "timonwong",
-      "unfunction",
-      "unsetopt",
-      "varlock",
-      "venv",
-      "vicmd",
-      "viins",
-      "viml",
-      "WORDCHARS",
-      "xadillax",
-      "zmodload",
-      "zprof",
-      "zshzle"
-    ],
-    "editor.rulers": [
-        80, 100
-    ],
+  "cSpell.words": [
+    "Apjanke's",
+    "Aquilina",
+    "Asciicast",
+    "asciinema",
+    "asciiquarium",
+    "autohide",
+    "autopair",
+    "autoselect",
+    "batcat",
+    "Benner",
+    "bierner",
+    "bindkey",
+    "Cascadia",
+    "cffinit",
+    "complist",
+    "Consolas",
+    "cowsay",
+    "decasify",
+    "direnv",
+    "dotenv",
+    "DUPS",
+    "echoti",
+    "endfor",
+    "expandtab",
+    "fira",
+    "harrydowning",
+    "hlissner",
+    "imageoptim",
+    "iterm",
+    "kcbt",
+    "kcud1",
+    "kcuf1",
+    "kcuu1",
+    "kdch1",
+    "kend",
+    "khome",
+    "killall",
+    "ldez",
+    "linuxbrew",
+    "Menlo",
+    "menuselect",
+    "mkpath",
+    "moreutils",
+    "nocompatible",
+    "noexpandtab",
+    "ohmyzsh",
+    "ollama",
+    "orcid",
+    "osascript",
+    "pandoc",
+    "pbat",
+    "penv",
+    "ppath",
+    "prettybat",
+    "rmkx",
+    "romkatv",
+    "SAVEHIST",
+    "setaf",
+    "setopt",
+    "shellcheck",
+    "shellenv",
+    "shfmt",
+    "shiftwidth",
+    "showmatch",
+    "Skylor",
+    "smkx",
+    "softtabstop",
+    "somo",
+    "sttr",
+    "tamasfe",
+    "terminfo",
+    "timonwong",
+    "unfunction",
+    "unsetopt",
+    "varlock",
+    "venv",
+    "vicmd",
+    "viins",
+    "viml",
+    "WORDCHARS",
+    "xadillax",
+    "zmodload",
+    "zprof",
+    "zshzle"
+  ],
+  "editor.rulers": [80, 100],
+  "makefile.configureOnOpen": false
 }
