--- a/src/home/.config/Code/User/settings.json
+++ b/src/home/.config/Code/User/settings.json
@@ -1,17 +1,15 @@
 {
-    // Aside from Fira Code, the font stack comes from Modern Font Stacks.
-    // See: https://modernfontstacks.com/#monospace-code
-    "editor.fontFamily": "'FiraCode Nerd Font Ret', ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace",
-    "editor.fontLigatures": true,
-    "editor.fontSize": 15,
-    "editor.minimap.autohide": "scroll",
-    "editor.rulers": [
-        80, 100, 120
-    ],
-    "files.insertFinalNewline": true,
-    "files.trimTrailingWhitespace": true,
-    "javascript.preferences.quoteStyle": "single",
-    "terminal.integrated.fontSize": 15,
-    "typescript.preferences.quoteStyle": "single",
-    "workbench.editor.empty.hint": "hidden"
+  // Aside from Fira Code, the font stack comes from Modern Font Stacks.
+  // See: https://modernfontstacks.com/#monospace-code
+  "editor.fontFamily": "'FiraCode Nerd Font Ret', ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace",
+  "editor.fontLigatures": true,
+  "editor.fontSize": 15,
+  "editor.minimap.autohide": "scroll",
+  "editor.rulers": [80, 100, 120],
+  "files.insertFinalNewline": true,
+  "files.trimTrailingWhitespace": true,
+  "javascript.preferences.quoteStyle": "single",
+  "terminal.integrated.fontSize": 15,
+  "typescript.preferences.quoteStyle": "single",
+  "workbench.editor.empty.hint": "hidden"
 }
