--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,6 @@
 # EditorConfig is awesome: https://EditorConfig.org
 
-# top-most EditorConfig file
+# Top-most EditorConfig file.
 root = true
 
 [*]
@@ -11,6 +11,6 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-# Tab indentation for Make targets
-[{M,m}akefile]
+# Tab indentation for Make targets.
+[Makefile]
 indent_style = tab
