--- a/src/home/.config/sheldon/plugins.toml
+++ b/src/home/.config/sheldon/plugins.toml
@@ -80,6 +80,15 @@ apply = ["defer"]
 github = "zsh-users/zsh-syntax-highlighting"
 apply = ["defer"]
 
+[plugins.zsh-syntax-highlighting.hooks]
+post = '''
+  if (( ! ${+ZSH_HIGHLIGHT_STYLES} )); then
+    typeset -A ZSH_HIGHLIGHT_STYLES
+  fi
+
+  ZSH_HIGHLIGHT_STYLES[alias]="fg=magenta,bold"
+  ZSH_HIGHLIGHT_STYLES[globbing]="fg=yellow"'''
+
 # This needs to be loaded after zsh-syntax-highlighting.
 [plugins.zsh-history-substring-search]
 github = "zsh-users/zsh-history-substring-search"
