Update spell check dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
     "expandtab",
     "fira",
     "fpath",
+    "GROFF",
     "harrydowning",
     "hlissner",
     "imageoptim",
@@ -40,6 +41,7 @@
     "khome",
     "killall",
     "ldez",
+    "LESSHISTFILE",
     "linuxbrew",
     "Menlo",
     "menuselect",
@@ -57,7 +59,11 @@
     "ppath",
     "prettybat",
     "rmkx",
+    "rmso",
+    "rmul",
     "romkatv",
+    "rsubm",
+    "rsupm",
     "SAVEHIST",
     "setaf",
     "setopt",
@@ -68,8 +74,11 @@
     "showmatch",
     "Skylor",
     "smkx",
+    "smul",
     "softtabstop",
     "somo",
+    "ssubm",
+    "ssupm",
     "sttr",
     "tamasfe",
     "terminfo",
