Update code style

--- a/src/home/.config/sheldon/plugins.toml
+++ b/src/home/.config/sheldon/plugins.toml
@@ -77,7 +77,7 @@ apply = ["defer"]
 [plugins.zsh-syntax-highlighting.hooks]
 post = """
   # See: https://github.com/zsh-users/zsh-syntax-highlighting/blob/master/docs/highlighters/main.md
-  if (( ! ${+ZSH_HIGHLIGHT_STYLES} )); then
+  if (( ! $+ZSH_HIGHLIGHT_STYLES )); then
     typeset -A ZSH_HIGHLIGHT_STYLES
   fi
 
@@ -95,7 +95,7 @@ post = '''
   # Make sure that the terminal is in application mode when zle is active, since
   # only then are values from `$terminfo` valid.
   # From: https://github.com/ohmyzsh/ohmyzsh/blob/master/lib/key-bindings.zsh
-  if (( ${+terminfo[smkx]} )) && (( ${+terminfo[rmkx]} )); then
+  if (( $+terminfo[smkx] )) && (( $+terminfo[rmkx] )); then
     function zle-line-init() { echoti smkx }
     function zle-line-finish() { echoti rmkx }
 
