Update apps in brewfile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
     "kcuf1",
     "kcuu1",
     "kdch1",
+    "keepingyouawake",
     "kend",
     "khome",
     "killall",
@@ -57,8 +58,10 @@
     "noexpandtab",
     "ohmyzsh",
     "ollama",
+    "orangekame",
     "orcid",
     "osascript",
+    "paclear",
     "pandoc",
     "pbat",
     "PCRE",
@@ -90,6 +93,7 @@
     "tamasfe",
     "terminfo",
     "timonwong",
+    "typst",
     "unfunction",
     "unsetopt",
     "varlock",
