--- a/src/home/.config/homebrew/Brewfile
+++ b/src/home/.config/homebrew/Brewfile
@@ -62,6 +62,9 @@ brew "fish"
 # Infamous electronic fortune-cookie generator
 brew "fortune"
 
+# Terminal JSON viewer
+brew "fx"
+
 # Distributed revision control system
 brew "git"
 
@@ -76,6 +79,9 @@ brew "less"
 
 # Rainbows and unicorns in your console!
 brew "lolcat"
+
+# Deep clean and optimize your Mac
+brew "mole"
 
 # Collection of tools that nobody wrote when UNIX was young
 brew "moreutils"
@@ -99,7 +105,7 @@ brew "pnpm"
 brew "prettier"
 
 # Interpreted, interactive, object-oriented programming language
-brew "python@3"
+brew "python"
 
 # Search tool like grep and The Silver Searcher
 brew "ripgrep"
@@ -125,8 +131,11 @@ brew "somo"
 # Cross-shell prompt for astronauts
 brew "starship"
 
-# CLI to perform various operations on string
-brew "sttr"
+# Granddaddy of HTML tools, with support for modern standards
+brew "tidy-html5"
+
+# Markup-based typesetting system
+brew "typst"
 
 # Unpack everything with one command
 brew "unp"
@@ -149,7 +158,7 @@ brew "wget2"
 # Process YAML, JSON, XML, CSV and properties documents from the CLI
 brew "yq"
 
-# paclear is a clear command with PAC-MAN animation
+# Paclear is a clear command with PAC-MAN animation
 brew "orangekame3/tap/paclear"
 
 # Incredibly fast JavaScript runtime, bundler, transpiler and package manager - all in one.
@@ -187,8 +196,8 @@ elsif OS.mac?
   # JetBrains tools manager
   cask "jetbrains-toolbox"
 
-  # Get up and running with large language models locally
-  cask "ollama-app"
+  # Tool to prevent the system from going into sleep mode
+  cask "keepingyouawake"
 
   # Verify system files structure, run miscellaneous maintenance and more
   cask "onyx"
