--- a/src/home/.config/sheldon/plugins.toml
+++ b/src/home/.config/sheldon/plugins.toml
@@ -61,14 +61,14 @@ inline = '''
       local nvmrc_node_version
       nvmrc_node_version=$(nvm version "$(cat "${nvmrc_path}")")
 
-      if [ "$nvmrc_node_version" = "N/A" ]; then
+      if [[ "${nvmrc_node_version}" == 'N/A' ]]; then
         nvm install
-      elif [ "$nvmrc_node_version" != "$(nvm version)" ]; then
+      elif [[ "${nvmrc_node_version}" != "$(nvm version)" ]]; then
         nvm use
       fi
-    elif [ -n "$(PWD=$OLDPWD nvm_find_nvmrc)" ] && [ "$(nvm version)" != "$(nvm version default)" ]; then
-      echo "Reverting to nvm default version"
-      nvm use default
+    elif [[ "$(nvm version)" != "$(nvm version system)" ]]; then
+      print 'No `.nvmrc` found in the current path, reverting nvm back to the system version of Node.js'
+      nvm use system
     fi
   }
 
