Update spellcheck dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
     "bindkey",
     "Cascadia",
     "cffinit",
+    "chpwd",
     "complist",
     "Consolas",
     "cowsay",
@@ -23,6 +24,7 @@
     "dotenv",
     "DUPS",
     "echoti",
+    "elif",
     "endfor",
     "expandtab",
     "figlet",
@@ -56,6 +58,7 @@
     "nman",
     "nocompatible",
     "noexpandtab",
+    "nvmrc",
     "ohmyzsh",
     "ollama",
     "orangekame",
