Add Claude Code Zsh skill

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
     "echoti",
     "elif",
     "endfor",
+    "esac",
     "expandtab",
     "figlet",
     "fira",
@@ -69,6 +70,7 @@
     "pbat",
     "PCRE",
     "penv",
+    "pipefail",
     "ppath",
     "prettybat",
     "rmkx",
@@ -97,6 +99,7 @@
     "tamasfe",
     "terminfo",
     "timonwong",
+    "tput",
     "typst",
     "unfunction",
     "unsetopt",
@@ -107,7 +110,9 @@
     "viml",
     "WORDCHARS",
     "xadillax",
+    "xtrace",
     "zmodload",
+    "zparseopts",
     "zprof",
     "zshzle"
   ],
